fix(develop_perpetual_heeju): fixed chart visible range, activeExist resetting, remaining interval bugs

--- a/src/components/ExchangeTVChart/ExchangeTVChart.css
+++ b/src/components/ExchangeTVChart/ExchangeTVChart.css
@@ -79,3 +79,19 @@
   overflow: hidden;
   background: linear-gradient(90deg, rgba(30, 34, 61, 0.9), rgba(38, 43, 71, 0.9));
 }
+
+.tooltip {
+  position: absolute;
+  display: none;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #828282;
+  background-color: #5b5b5b;
+  color: #fff;
+  text-align: center;
+  font-size: 0.8rem;
+  line-height: 20px;
+  /* border-radius: 5px; */
+  pointer-events: none;
+  z-index: 1000;
+}
